--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2407.09007"><b>Benchmarking Language Model Creativity: A Case Study on Code Generation.</b></a>  <br />    <a href="https://yining610.github.io/"><font color="Black"> Yining Lu</font></a>, Dixuan Wang, <a href="https://tianjianl.github.io/"><font color="Black"> Tianjian Li</font></a>, <a href="https://jiangdongwei.com/"><font color="Black"> Dongwei Jiang</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference of the North American Chapter of the Association for Computational Linguistics (NAACL)</font>, 2025. <font size=-1><a href="https://youtu.be/v1cHyCcTm6A">[talk]</a> <a href="http://danielkhashabi.com/files/2025_neocoder/NeoCoder_poster_naacl_2025.pptx">[poster]</a> <a href="https://github.com/JHU-CLSP/NeoCoder">[code]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2407.09007"><b>Benchmarking Language Model Creativity: A Case Study on Code Generation.</b></a>  <br />    <a href="https://yining610.github.io/"><font color="Black"> Yining Lu</font></a>, Dixuan Wang, <a href="https://tianjianl.github.io/"><font color="Black"> Tianjian Li</font></a>, <a href="https://jiangdongwei.com/"><font color="Black"> Dongwei Jiang</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference of the North American Chapter of the Association for Computational Linguistics (NAACL)</font>, 2025. <font size=-1><a href="http://danielkhashabi.com/files/2025_neocoder/NeoCoder_slides_naacl_2025.pptx">[slides]</a> <a href="https://youtu.be/v1cHyCcTm6A">[talk]</a> <a href="http://danielkhashabi.com/files/2025_neocoder/NeoCoder_poster_naacl_2025.pptx">[poster]</a> <a href="https://github.com/JHU-CLSP/NeoCoder">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -164,7 +164,7 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2410.08968"><b>Controllable Safety Alignment: Inference-Time Adaptation to Diverse Safety Requirements.</b></a>  <br />    <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, Ahmed Elgohary, Ahmed Magooda, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>. <br />   <font color="DarkRed">International Conference on Learning Representations (ICLR)</font>, 2025. <font size=-1><a href="https://huggingface.co/collections/jackzhang/controllable-safety-alignment-677850d9175e7d2615404504">[data]</a> <a href="https://github.com/microsoft/controllable-safety-alignment">[code]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2410.08968"><b>Controllable Safety Alignment: Inference-Time Adaptation to Diverse Safety Requirements.</b></a>  <br />    <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, Ahmed Elgohary, Ahmed Magooda, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>. <br />   <font color="DarkRed">International Conference on Learning Representations (ICLR)</font>, 2025. <font size=-1><a href="https://huggingface.co/collections/jackzhang/controllable-safety-alignment-677850d9175e7d2615404504">[data]</a> <a href="http://danielkhashabi.com/files/2025_inference_time_alignment/1014_CLSP_CoSA.pptx">[slides]</a> <a href="http://danielkhashabi.com/files/2025_inference_time_alignment/CoSA_short_video_iclr.pptx">[slides2]</a> <a href="https://youtu.be/kDioFnRyPTY">[talk]</a> <a href="https://github.com/microsoft/controllable-safety-alignment">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -284,7 +284,7 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2202.11705"><b>COLD Decoding: Energy-based Constrained Text Generation with Langevin Dynamics.</b></a>  <br />    <a href="https://lianhui.ucsd.edu/"><font color="Black"> Lianhui Qin</font></a>, <a href="https://wellecks.com/"><font color="Black"> Sean Welleck</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://homes.cs.washington.edu/~yejin/"><font color="Black"> Yejin Choi</font></a>. <br />   <font color="DarkRed">Advances in Neural Information Processing Systems (NeurIPS)</font>, 2022. <font size=-1><a href="http://danielkhashabi.com/files/2022_decoding/sean_ifds2022_constrained.pdf">[slides]</a> <a href="http://danielkhashabi.com/files/2022_decoding/COLD_poster.key">[poster]</a> <a href="https://github.com/qkaren/COLD_decoding">[code]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2202.11705"><b>COLD Decoding: Energy-based Constrained Text Generation with Langevin Dynamics.</b></a>  <br />    <a href="https://lianhui.ucsd.edu/"><font color="Black"> Lianhui Qin</font></a>, <a href="https://wellecks.com/"><font color="Black"> Sean Welleck</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://homes.cs.washington.edu/~yejin/"><font color="Black"> Yejin Choi</font></a>. <br />   <font color="DarkRed">Advances in Neural Information Processing Systems (NeurIPS)</font>, 2022. <font size=-1><a href="http://danielkhashabi.com/files/2022_decoding/sean_ifds2022_constrained.pdf">[slides]</a> <a href="https://neurips.cc/virtual/2022/poster/52789">[talk]</a> <a href="http://danielkhashabi.com/files/2022_decoding/COLD_poster.key">[poster]</a> <a href="https://github.com/qkaren/COLD_decoding">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -469,7 +469,7 @@ Other affiliations:</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-04-04 20:05:57 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-04-07 23:31:37 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
