--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2403.11905"><b>TurkingBench: A Challenge Benchmark for Web Agents.</b></a>  <br />    Kevin Xu, <a href="https://yeganehkordi.github.io/"><font color="Black"> Yeganeh Kordi</font></a>, Tanay Nayak, Adi Asija, <a href="https://homes.cs.washington.edu/~yizhongw/"><font color="Black"> Yizhong Wang</font></a>, Kate Sanders, <a href="https://scholar.google.com/citations?user=t3Hhnx8AAAAJ&amp;hl=en"><font color="Black"> Adam Byerly</font></a>, <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference of the North American Chapter of the Association for Computational Linguistics (NAACL)</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/turking-bench">[data]</a> <a href="https://turkingbench.github.io/">[demo]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2403.11905"><b>TurkingBench: A Challenge Benchmark for Web Agents.</b></a>  <br />    Kevin Xu, <a href="https://yeganehkordi.github.io/"><font color="Black"> Yeganeh Kordi</font></a>, Tanay Nayak, Adi Asija, <a href="https://homes.cs.washington.edu/~yizhongw/"><font color="Black"> Yizhong Wang</font></a>, Kate Sanders, <a href="https://scholar.google.com/citations?user=t3Hhnx8AAAAJ&amp;hl=en"><font color="Black"> Adam Byerly</font></a>, <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference of the North American Chapter of the Association for Computational Linguistics (NAACL)</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/turking-bench">[data]</a> <a href="http://danielkhashabi.com/files/2025_turkingbench/turking-bench-naacl.pdf">[slides]</a> <a href="https://www.youtube.com/watch?v=BXRynpaWhTw">[talk]</a> <a href="https://turkingbench.github.io/">[demo]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -469,7 +469,7 @@ Other affiliations:</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-04-07 23:31:37 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-04-08 01:32:08 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
