--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2410.04579"><b>Upsample or Upweight? Balanced Training on Heavily Imbalanced Datasets.</b></a>  <br />    <a href="https://tianjianl.github.io/"><font color="Black"> Tianjian Li</font></a>, <a href="https://www.fe1ixxu.com/"><font color="Black"> Haoran Xu</font></a>, <a href="https://steventan0110.github.io/"><font color="Black"> Weiting Tan</font></a>, <a href="https://kentonmurray.com/index.html"><font color="Black"> Kenton Murray</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference of the North American Chapter of the Association for Computational Linguistics (NAACL)</font>, 2025. <font size=-1></font></p>
+<li><p><a href="https://arxiv.org/abs/2410.04579"><b>Upsample or Upweight? Balanced Training on Heavily Imbalanced Datasets.</b></a>  <br />    <a href="https://tianjianl.github.io/"><font color="Black"> Tianjian Li</font></a>, <a href="https://www.fe1ixxu.com/"><font color="Black"> Haoran Xu</font></a>, <a href="https://steventan0110.github.io/"><font color="Black"> Weiting Tan</font></a>, <a href="https://kentonmurray.com/index.html"><font color="Black"> Kenton Murray</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference of the North American Chapter of the Association for Computational Linguistics (NAACL)</font>, 2025. <font size=-1><a href="http://danielkhashabi.com/files/2025_cooldown/Cooldown_NAACL_2025_10min.pdf">[slides]</a> <a href="https://youtu.be/d3x5neuqJP8">[talk]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -469,7 +469,7 @@ Other affiliations:</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-04-08 01:32:08 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-04-08 20:58:54 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
