--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ Other affiliations:</p>
 </ul>
 </td></tr></table>
 <p><h2 id="themes">Research Themes</h2></p>
-<p>Broadly, my research is anchored around <b>natural language as a key communication medium</b> and is motivated by <b>making AI systems</b> (1) <b>helpful</b> and (2) <b>efficient</b>.</p>
+<p>Broadly, my research is anchored around the use of <b>natural language as a key medium for communication</b> between humans and AI systems and is driven by the goal of making these systems <b>more helpful</b>, <b>reliable</b>, and <b>efficient</b>.</p>
 <p>In pursuit of these objectives, my team and I have made various endeavors toward the following more specific themes:</p>
 <ul>
 <li><p><i>Augmentation</i>: Developing computational models that synergistically augment human experience. The ultimate goal of our work is to benefit humans!</p>
@@ -144,7 +144,7 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2404.03862"><b>Verifiable by Design: Aligning Language Models to Quote from Pre-Training Data.</b></a>  <br />    <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, <a href="https://marcmarone.com/"><font color="Black"> Marc Marone</font></a>, <a href="https://tianjianl.github.io/"><font color="Black"> Tianjian Li</font></a>, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference of the North American Chapter of the Association for Computational Linguistics (NAACL)</font>, 2025. <font size=-1><a href="https://www.cs.jhu.edu/~danielk/files/2024_quote_tuning/QuoteTuning-MASC.pdf">[slides]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2404.03862"><b>Verifiable by Design: Aligning Language Models to Quote from Pre-Training Data.</b></a>  <br />    <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, <a href="https://marcmarone.com/"><font color="Black"> Marc Marone</font></a>, <a href="https://tianjianl.github.io/"><font color="Black"> Tianjian Li</font></a>, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference of the North American Chapter of the Association for Computational Linguistics (NAACL)</font>, 2025. <font size=-1><a href="http://danielkhashabi.com/files/2024_quote_tuning/QuoteTuning-NAACL.pdf">[slides]</a> <a href="https://www.cs.jhu.edu/~danielk/files/2024_quote_tuning/QuoteTuning-MASC.pdf">[slides2]</a> <a href="https://youtu.be/fVowRxoTCkE">[talk]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -469,7 +469,7 @@ Other affiliations:</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-04-08 20:58:54 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-04-13 23:57:41 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
