--- a/index.html
+++ b/index.html
@@ -136,6 +136,10 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2504.10284"><b>Can LLMs Generate Tabular Summaries of Science Papers? Rethinking the Evaluation Protocol.</b></a>  <br />    Weiqi Wang, <a href="https://jefferyo.github.io/"><font color="Black"> Jiefu Ou</font></a>, Yangqiu Song, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2504.10284</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/arXiv2Table">[data]</a></font></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2503.21717"><b>ClaimCheck: How Grounded are LLM Critiques of Scientific Papers?</b></a>  <br />    <a href="https://jefferyo.github.io/"><font color="Black"> Jiefu Ou</font></a>, William Gantt Walden, Kate Sanders, <a href="https://zipjiang.github.io/"><font color="Black"> Zhengping Jiang</font></a>, Kaiser Sun, Jeffrey Cheng, William Jurayj, Miriam Wanner, Shaobo Liang, <a href="https://candice-morgan.github.io/"><font color="Black"> Candice Morgan</font></a>, Seunghoon Han, Weiqi Wang, Chandler May, Hannah Recknor, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2503.21717</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/CLAIMCHECK">[data]</a></font></p>
 </li>
 </ul>
@@ -164,7 +168,7 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2410.08968"><b>Controllable Safety Alignment: Inference-Time Adaptation to Diverse Safety Requirements.</b></a>  <br />    <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, Ahmed Elgohary, Ahmed Magooda, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>. <br />   <font color="DarkRed">International Conference on Learning Representations (ICLR)</font>, 2025. <font size=-1><a href="https://huggingface.co/collections/jackzhang/controllable-safety-alignment-677850d9175e7d2615404504">[data]</a> <a href="http://danielkhashabi.com/files/2025_inference_time_alignment/1014_CLSP_CoSA.pptx">[slides]</a> <a href="http://danielkhashabi.com/files/2025_inference_time_alignment/CoSA_short_video_iclr.pptx">[slides2]</a> <a href="https://youtu.be/kDioFnRyPTY">[talk]</a> <a href="https://github.com/microsoft/controllable-safety-alignment">[code]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2410.08968"><b>Controllable Safety Alignment: Inference-Time Adaptation to Diverse Safety Requirements.</b></a>  <br />    <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, Ahmed Elgohary, Ahmed Magooda, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>. <br />   <font color="DarkRed">International Conference on Learning Representations (ICLR)</font>, 2025. <font size=-1><a href="https://huggingface.co/collections/jackzhang/controllable-safety-alignment-677850d9175e7d2615404504">[data]</a> <a href="http://danielkhashabi.com/files/2025_inference_time_alignment/1014_CLSP_CoSA.pptx">[slides]</a> <a href="http://danielkhashabi.com/files/2025_inference_time_alignment/CoSA_short_video_iclr.pptx">[slides2]</a> <a href="https://youtu.be/kDioFnRyPTY">[talk]</a> <a href="http://danielkhashabi.com/files/2025_inference_time_alignment/iclr-poster.pdf">[poster]</a> <a href="https://github.com/microsoft/controllable-safety-alignment">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -469,7 +473,7 @@ Other affiliations:</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-04-13 23:57:41 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-04-14 22:26:18 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
