--- a/index.html
+++ b/index.html
@@ -136,6 +136,10 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2504.13834"><b>Science Hierarchography: Hierarchical Abstractions of Scientific Literature.</b></a>  <br />    Muhan Gao, Jash Shah, Weiqi Wang and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2504.13834</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/science-hierarchography/">[data]</a></font></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2504.10284"><b>Can LLMs Generate Tabular Summaries of Science Papers? Rethinking the Evaluation Protocol.</b></a>  <br />    Weiqi Wang, <a href="https://jefferyo.github.io/"><font color="Black"> Jiefu Ou</font></a>, Yangqiu Song, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2504.10284</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/arXiv2Table">[data]</a></font></p>
 </li>
 </ul>
@@ -164,7 +168,7 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/pdf/2411.11844"><b>Generative World Explorer.</b></a>  <br />    <a href="https://taiminglu.com/"><font color="Black"> Taiming Lu</font></a>, <a href="https://www.tshu.io/"><font color="Black"> Tianmin Shu</font></a>, <a href="https://www.cs.jhu.edu/~ayuille/"><font color="Black"> Alan Yuille</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://beckschen.github.io/"><font color="Black"> Jieneng Chen</font></a>. <br />   <font color="DarkRed">International Conference on Learning Representations (ICLR)</font>, 2025. <font size=-1><a href="http://danielkhashabi.com/files/Jieneng_GenEx_Short_Jan.pptx">[slides]</a> <a href="http://danielkhashabi.com/files/2025_genex/Genex_ICLR_Poster_white_background.pdf">[poster]</a> <a href="https://generative-world-explorer.github.io/">[project]</a> <a href="https://www.youtube.com/channel/UCWWiAEF7PMk-OK0-rwGITIg">[demo]</a></font></p>
+<li><p><a href="https://arxiv.org/pdf/2411.11844"><b>GenEx: Generating an Explorable World.</b></a>  <br />    <a href="https://taiminglu.com/"><font color="Black"> Taiming Lu</font></a>, <a href="https://www.tshu.io/"><font color="Black"> Tianmin Shu</font></a>, <a href="https://www.cs.jhu.edu/~ayuille/"><font color="Black"> Alan Yuille</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://beckschen.github.io/"><font color="Black"> Jieneng Chen</font></a>. <br />   <font color="DarkRed">International Conference on Learning Representations (ICLR)</font>, 2025. <font size=-1><a href="http://danielkhashabi.com/files/Jieneng_GenEx_Short_Jan.pptx">[slides]</a> <a href="http://danielkhashabi.com/files/2025_genex/Genex_ICLR_Poster_white_background.pdf">[poster]</a> <a href="https://generative-world-explorer.github.io/">[project]</a> <a href="https://www.youtube.com/channel/UCWWiAEF7PMk-OK0-rwGITIg">[demo]</a> <a href="https://arxiv.org/abs/2412.09624">[blog]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -181,10 +185,6 @@ Other affiliations:</p>
 </ul>
 <ul>
 <li><p><a href="https://www.acpjournals.org/doi/abs/10.7326/ANNALS-25-00012"><b>Large Language Models for Screening Search Results in Systematic Reviews: Are We There Yet?</b></a>  <br />    S Swaroop Vedula and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Annals of Internal Medicine</font>, 2025. <font size=-1></font></p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2412.09624"><b>GenEx: Generating an Explorable World.</b></a>  <br />    <a href="https://taiminglu.com/"><font color="Black"> Taiming Lu</font></a>, <a href="https://www.tshu.io/"><font color="Black"> Tianmin Shu</font></a>, Junfei Xiao, Luoxin Ye, Jiahao Wang, Cheng Peng, Chen Wei, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, <a href="https://engineering.jhu.edu/faculty/rama-chellappa/"><font color="Black"> Rama Chellappa</font></a>, <a href="https://www.cs.jhu.edu/~ayuille/"><font color="Black"> Alan Yuille</font></a> and <a href="https://beckschen.github.io/"><font color="Black"> Jieneng Chen</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2412.09624</font>, 2024. <font size=-1><a href="https://genex.world/">[project]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -473,7 +473,7 @@ Other affiliations:</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-04-14 22:26:18 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-04-21 09:16:19 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
