--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ Other affiliations:</p>
 </div></div>
 <p><h2 id="talks">Recent Talks</h2></p>
 <ul>
-<li><p>2025, University of Pennsylvania Computational Linguistics lunch</p>
+<li><p>2025, University of Pennsylvania Computational Linguistics lunch (<a href="https://danielkhashabi.com//files/2025_clunch_talk/2025-penn-clunch.pdf">slides</a>)</p>
 </li>
 <li><p>2024, University of Cambridge the Language Technology Lab seminar (<a href="https://danielkhashabi.com//files/2024_cambridge_talk/2024-cambridge2.pdf">slides</a>)</p>
 </li>
@@ -473,7 +473,7 @@ Other affiliations:</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-04-21 09:16:19 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-04-21 18:29:22 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
