--- a/index.html
+++ b/index.html
@@ -136,6 +136,10 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2504.16046"><b>Certified Mitigation of Worst-Case LLM Copyright Infringement.</b></a>  <br />    <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, Jiacan Yu, <a href="https://marcmarone.com/"><font color="Black"> Marc Marone</font></a>, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2504.16046</font>, 2025. <font size=-1></font></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2504.13834"><b>Science Hierarchography: Hierarchical Abstractions of Scientific Literature.</b></a>  <br />    Muhan Gao, Jash Shah, Weiqi Wang and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2504.13834</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/science-hierarchography/">[data]</a></font></p>
 </li>
 </ul>
@@ -473,7 +477,7 @@ Other affiliations:</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-04-21 18:29:22 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-04-23 01:03:26 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
