--- a/index.html
+++ b/index.html
@@ -160,6 +160,10 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2505.02363"><b>SimpleMix: Frustratingly Simple Mixing of Off- and On-policy Data in Language Model Preference Learning.</b></a>  <br />    <a href="https://tianjianl.github.io/"><font color="Black"> Tianjian Li</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">International Conference on Machine Learning (ICML)</font>, 2025. <font size=-1></font></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2404.03862"><b>Verifiable by Design: Aligning Language Models to Quote from Pre-Training Data.</b></a>  <br />    <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, <a href="https://marcmarone.com/"><font color="Black"> Marc Marone</font></a>, <a href="https://tianjianl.github.io/"><font color="Black"> Tianjian Li</font></a>, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference of the North American Chapter of the Association for Computational Linguistics (NAACL)</font>, 2025. <font size=-1><a href="http://danielkhashabi.com/files/2024_quote_tuning/QuoteTuning-NAACL.pdf">[slides]</a> <a href="https://www.cs.jhu.edu/~danielk/files/2024_quote_tuning/QuoteTuning-MASC.pdf">[slides2]</a> <a href="https://youtu.be/fVowRxoTCkE">[talk]</a></font></p>
 </li>
 </ul>
@@ -228,6 +232,10 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2310.08540"><b>Do Pretrained Transformers Learn In-Context by Gradient Descent?</b></a>  <br />    <a href="https://shadowkiller33.github.io/"><font color="Black"> Lingfeng Shen</font></a>, <a href="https://aamixsh.github.io/"><font color="Black"> Aayush Mishra</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">International Conference on Machine Learning (ICML)</font>, 2024. <font size=-1><a href="https://danielkhashabi.com/files/2024_icl_gd/2024_icml_icl_gd.pptx">[slides]</a> <a href="https://www.youtube.com/watch?v=JrBtK3d7Jo8">[talk]</a></font></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2401.13136"><b>The Language Barrier: Dissecting Safety Challenges of LLMs in Multilingual Context.</b></a>  <br />    <a href="https://shadowkiller33.github.io/"><font color="Black"> Lingfeng Shen</font></a>, <a href="https://steventan0110.github.io/"><font color="Black"> Weiting Tan</font></a>, <a href="https://www.seas.upenn.edu/~sihaoc/"><font color="Black"> Sihao Chen</font></a>, Yunmo Chen, <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, <a href="https://www.fe1ixxu.com/"><font color="Black"> Haoran Xu</font></a>, Boyuan Zheng, <a href="https://www.cs.jhu.edu/~phi/"><font color="Black"> Philipp Koehn</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Annual Meeting of the Association for Computational Linguistics (ACL) - Findings</font>, 2024. <font size=-1></font></p>
 </li>
 </ul>
@@ -241,10 +249,6 @@ Other affiliations:</p>
 </ul>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2310.03991"><b>SemStamp: A Semantic Watermark with Paraphrastic Robustness for Text Generation.</b></a>  <br />    <a href="https://nlp4policy.notion.site/Abe-Hou-21661aa32a7a4d19a45b5bf31c11a99e"><font color="Black"> Abe Bohan Hou</font></a>, <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, <a href="https://cloudygoose.github.io/"><font color="Black"> Tianxing He</font></a>, Yichen Wang, Yung-Sung Chuang, Hongwei Wang, <a href="https://shadowkiller33.github.io/"><font color="Black"> Lingfeng Shen</font></a>, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://homes.cs.washington.edu/~yuliats/"><font color="Black"> Yulia Tsvetkov</font></a>. <br />   <font color="DarkRed">Conference of the North American Chapter of the Association for Computational Linguistics (NAACL)</font>, 2024. <font size=-1><a href="https://github.com/bohanhou14/SemStamp">[code]</a></font></p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2310.08540"><b>Do Pretrained Transformers Learn In-Context by Gradient Descent?</b></a>  <br />    <a href="https://shadowkiller33.github.io/"><font color="Black"> Lingfeng Shen</font></a>, <a href="https://aamixsh.github.io/"><font color="Black"> Aayush Mishra</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">International Conference on Machine Learning (ICML)</font>, 2024. <font size=-1><a href="https://danielkhashabi.com/files/2024_icl_gd/2024_icml_icl_gd.pptx">[slides]</a> <a href="https://www.youtube.com/watch?v=JrBtK3d7Jo8">[talk]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -481,7 +485,7 @@ Other affiliations:</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-04-29 08:43:29 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-05-05 22:45:29 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
