--- a/index.html
+++ b/index.html
@@ -63,8 +63,72 @@ Other affiliations:</p>
 <p>The dominant majority of my research is aligned with the following research communities: <i>natural language processing</i> (ACL, NAACL, EMNLP), <i>machine learning</i>  (ICLR, NeurIPS, ICML), and <i>artificial intelligence</i> (AAAI, IJCAI).</p>
 <div class="infoblock">
 <div class="blockcontent">
-<p><i>If you are an undergraduate or masters student and would like to work on research with my group, please fill out <a href="https://forms.gle/6AZg34JVkkZZieySA">this form</a>.</i><br />
-</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Information for Prospective Students and Visitors</title>
+  <style>
+    #info-content {
+      display: none;
+      margin-top: 10px;
+    }
+    h2 {
+      cursor: pointer;
+      color: #0056b3;
+    }
+  </style>
+</head>
+<body>
+
+  <p onclick="toggleInfo()" class="link-lookalike">Here is some information for prospective students and visitors.</p>
+
+  <div id="info-content">
+    <p>
+      Due to the large number of emails I receive, I cannot respond to every email individually.
+      Please review the information below before contacting me.
+    </p>
+    <ul>
+      <li>
+        <strong>Current JHU students:</strong>
+        <em>
+          If you are an undergraduate or masters student and would like to work on research with my group,
+          please fill out
+          <a href="https://forms.gle/6AZg34JVkkZZieySA">this form</a>.
+          The minimum time commitment is 15 hours per week for six months.
+        </em>
+      </li>
+      <li>
+        <strong>Prospective visiting students:</strong>
+        <em>
+          Please fill out the above form. For visiting graduate students, the minimum length of a visit is six months.
+        </em>
+      </li>
+      <li>
+        <strong>Prospective postdocs:</strong>
+        <em>
+          Please email me directly with your CV and I will get back to you if there is an opportunity that is a good fit.
+        </em>
+      </li>
+      <li>
+        <strong>Prospective graduate students:</strong>
+        <em>
+          Please apply through the system and list me as a potential advisor in your application.
+          <strong>There is no need to contact me.</strong>
+        </em>
+      </li>
+    </ul>
+  </div>
+
+  <script>
+    function toggleInfo() {
+      const info = document.getElementById('info-content');
+      info.style.display = info.style.display === 'none' ? 'block' : 'none';
+    }
+  </script>
+
+</body>
+</html>
 </div></div>
 <p><h2 id="talks">Recent Talks</h2></p>
 <ul>
@@ -485,7 +549,7 @@ Other affiliations:</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-05-05 22:45:29 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-05-11 11:29:59 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
