--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ Other affiliations:</p>
 <li><p><i>Applications of AI</i>: We are excited about the increased adoption of AI! We have ongoing work on AI for science and clinical applications.</p>
 </li>
 </ul>
-<p>The dominant majority of my research is aligned with the following research communities: <i>natural language processing</i> (ACL, NAACL, EMNLP), <i>machine learning</i>  (ICLR, NeurIPS, ICML), and <i>artificial intelligence</i> (AAAI, IJCAI).</p>
+<p>The majority of my research is aligned with the following research communities: <i>natural language processing</i> (ACL, NAACL, EMNLP), <i>machine learning</i>  (ICLR, NeurIPS, ICML), and <i>artificial intelligence</i> (AAAI, IJCAI).</p>
 <div class="infoblock">
 <div class="blockcontent">
 <!DOCTYPE html>
@@ -549,7 +549,7 @@ Other affiliations:</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-05-11 11:29:59 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-05-11 11:37:37 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
