--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <div class="menu-item"><a href="index.html#themes">Research&nbsp;Themes</a></div>
 <div class="menu-item"><a href="index.html#talks">Talks/Slides</a></div>
 <div class="menu-item"><a href="index.html#teaching">Teaching</a></div>
+<div class="menu-item"><a href="index.html#lab">Lab</a></div>
 <div class="menu-item"><a href="index.html#publication">Publication</a></div>
 </td>
 <td id="layout-content">
@@ -224,6 +225,14 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2407.03572"><b>Core: Robust Factual Precision Scoring with Informative Sub-Claim Identification.</b></a>  <br />    <a href="https://zipjiang.github.io/"><font color="Black"> Zhengping Jiang</font></a>, <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, <a href="https://nweir127.github.io/"><font color="Black"> Nathaniel Weir</font></a>, Seth Ebner, Miriam Wanner, Kate Sanders, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, <a href="https://anqiliu-ai.github.io/"><font color="Black"> Anqi Liu</font></a> and <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>. <br />   <font color="DarkRed">Annual Meeting of the Association for Computational Linguistics (ACL) - Findings</font>, 2025. <font size=-1><a href="https://github.com/zipJiang/Core">[code]</a></font></p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2410.01044"><b>RATIONALYST: Pre-training Process-Supervision for Improving Reasoning.</b></a>  <br />    <a href="https://jiangdongwei.com/"><font color="Black"> Dongwei Jiang</font></a>, Guoxuan Wang, <a href="https://yining610.github.io/"><font color="Black"> Yining Lu</font></a>, <a href="https://scholar.google.com/citations?user=clTRNPsAAAAJ&amp;hl=en"><font color="Black"> Andrew Wang</font></a>, <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, Chuyu Liu, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Annual Meeting of the Association for Computational Linguistics (ACL)</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/Rationalyst">[code]</a></font></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2505.02363"><b>SimpleMix: Frustratingly Simple Mixing of Off- and On-policy Data in Language Model Preference Learning.</b></a>  <br />    <a href="https://tianjianl.github.io/"><font color="Black"> Tianjian Li</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">International Conference on Machine Learning (ICML)</font>, 2025. <font size=-1></font></p>
 </li>
 </ul>
@@ -268,14 +277,6 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2410.01044"><b>RATIONALYST: Pre-training Process-Supervision for Improving Reasoning.</b></a>  <br />    <a href="https://jiangdongwei.com/"><font color="Black"> Dongwei Jiang</font></a>, Guoxuan Wang, <a href="https://yining610.github.io/"><font color="Black"> Yining Lu</font></a>, <a href="https://scholar.google.com/citations?user=clTRNPsAAAAJ&amp;hl=en"><font color="Black"> Andrew Wang</font></a>, <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, Chuyu Liu, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2410.01044</font>, 2024. <font size=-1><a href="https://github.com/JHU-CLSP/Rationalyst">[code]</a></font></p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2407.03572"><b>Core: Robust Factual Precision Scoring with Informative Sub-Claim Identification.</b></a>  <br />    <a href="https://zipjiang.github.io/"><font color="Black"> Zhengping Jiang</font></a>, <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, <a href="https://nweir127.github.io/"><font color="Black"> Nathaniel Weir</font></a>, Seth Ebner, Miriam Wanner, Kate Sanders, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, <a href="https://anqiliu-ai.github.io/"><font color="Black"> Anqi Liu</font></a> and <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2407.03572</font>, 2024. <font size=-1><a href="https://github.com/zipJiang/Core">[code]</a></font></p>
-</li>
-</ul>
-<ul>
 <li><p><a href="https://arxiv.org/abs/2406.20092"><b>LLaVolta: Efficient Multi-modal Models via Stage-wise Visual Context Compression.</b></a>  <br />    <a href="https://beckschen.github.io/"><font color="Black"> Jieneng Chen</font></a>, Luoxin Ye, Ju He, Zhao-Yang Wang, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://www.cs.jhu.edu/~ayuille/"><font color="Black"> Alan Yuille</font></a>. <br />   <font color="DarkRed">Advances in Neural Information Processing Systems (NeurIPS)</font>, 2024. <font size=-1><a href="https://github.com/Beckschen/LLaVolta">[code]</a> <a href="https://beckschen.github.io/llavolta.html">[project]</a></font></p>
 </li>
 </ul>
@@ -296,10 +297,6 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2310.08540"><b>Do Pretrained Transformers Learn In-Context by Gradient Descent?</b></a>  <br />    <a href="https://shadowkiller33.github.io/"><font color="Black"> Lingfeng Shen</font></a>, <a href="https://aamixsh.github.io/"><font color="Black"> Aayush Mishra</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">International Conference on Machine Learning (ICML)</font>, 2024. <font size=-1><a href="https://danielkhashabi.com/files/2024_icl_gd/2024_icml_icl_gd.pptx">[slides]</a> <a href="https://www.youtube.com/watch?v=JrBtK3d7Jo8">[talk]</a></font></p>
-</li>
-</ul>
-<ul>
 <li><p><a href="https://arxiv.org/abs/2401.13136"><b>The Language Barrier: Dissecting Safety Challenges of LLMs in Multilingual Context.</b></a>  <br />    <a href="https://shadowkiller33.github.io/"><font color="Black"> Lingfeng Shen</font></a>, <a href="https://steventan0110.github.io/"><font color="Black"> Weiting Tan</font></a>, <a href="https://www.seas.upenn.edu/~sihaoc/"><font color="Black"> Sihao Chen</font></a>, Yunmo Chen, <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, <a href="https://www.fe1ixxu.com/"><font color="Black"> Haoran Xu</font></a>, Boyuan Zheng, <a href="https://www.cs.jhu.edu/~phi/"><font color="Black"> Philipp Koehn</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Annual Meeting of the Association for Computational Linguistics (ACL) - Findings</font>, 2024. <font size=-1></font></p>
 </li>
 </ul>
@@ -309,6 +306,10 @@ Other affiliations:</p>
 </ul>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2402.18678"><b>RORA: Robust Free-Text Rationale Evaluation.</b></a>  <br />    <a href="https://zipjiang.github.io/"><font color="Black"> Zhengping Jiang</font></a>, <a href="https://yining610.github.io/"><font color="Black"> Yining Lu</font></a>, <a href="https://hanjiechen.github.io/"><font color="Black"> Hanjie Chen</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://anqiliu-ai.github.io/"><font color="Black"> Anqi Liu</font></a>. <br />   <font color="DarkRed">Annual Meeting of the Association for Computational Linguistics (ACL)</font>, 2024. <font size=-1></font></p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2310.08540"><b>Do Pretrained Transformers Learn In-Context by Gradient Descent?</b></a>  <br />    <a href="https://shadowkiller33.github.io/"><font color="Black"> Lingfeng Shen</font></a>, <a href="https://aamixsh.github.io/"><font color="Black"> Aayush Mishra</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">International Conference on Machine Learning (ICML)</font>, 2024. <font size=-1><a href="https://danielkhashabi.com/files/2024_icl_gd/2024_icml_icl_gd.pptx">[slides]</a> <a href="https://www.youtube.com/watch?v=JrBtK3d7Jo8">[talk]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -549,7 +550,7 @@ Other affiliations:</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-05-11 11:37:37 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-05-16 03:41:02 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
