--- a/index.html
+++ b/index.html
@@ -193,6 +193,25 @@ Other affiliations:</p>
 <li><p>CS 601.771, Advances in Self-supervised Models: <a href="https://self-supervised.cs.jhu.edu/fa2022/">Fall 2022</a>, <a href="https://self-supervised.cs.jhu.edu/fa2024/">Fall 2024</a></p>
 </li>
 </ul>
+<p><h2 id="lab">Intelligence Amplification Lab (IALab)</h2>
+PhD students:</p>
+<ul>
+<li><p><a href="https://scholar.google.com/citations?user=t3Hhnx8AAAAJ&amp;hl=en/">Adam Byerly</a></p>
+</li>
+<li><p><a href="https://jackz.io/">Jack Jingyu Zhang</a> - co-advised w/ Benjamin Van Durme</p>
+</li>
+<li><p><a href="https://andrewwnlp.github.io/">Andrew Wang</a> - co-advised w/ Nick Andrews</p>
+</li>
+<li><p><a href="https://jefferyo.github.io/">Jiefu Ou</a> - co-advised w/ Benjamin Van Durme</p>
+</li>
+<li><p><a href="https://tianjianl.github.io/">Tianjian Li</a></p>
+</li>
+<li><p><a href="https://isgla.github.io/">Hannah Gonzalez</a> - co-advised w/ Benjamin Van Durme</p>
+</li>
+<li><p><a href="https://cozheyuanzhangde.github.io/">Zheyuan &ldquo;Brian&rdquo; Zhang</a> - co-advised w/ Tianmin Shu</p>
+</li>
+</ul>
+<p>We’re also grateful to collaborate with a number of exceptional MS and undergraduate students who are not listed here.</p>
 <p><h2 id="publication">Publication</h2></p>
 <p><b>Disclaimer:</b> This material is presented to ensure the timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
@@ -229,7 +248,7 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2410.01044"><b>RATIONALYST: Pre-training Process-Supervision for Improving Reasoning.</b></a>  <br />    <a href="https://jiangdongwei.com/"><font color="Black"> Dongwei Jiang</font></a>, Guoxuan Wang, <a href="https://yining610.github.io/"><font color="Black"> Yining Lu</font></a>, <a href="https://scholar.google.com/citations?user=clTRNPsAAAAJ&amp;hl=en"><font color="Black"> Andrew Wang</font></a>, <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, Chuyu Liu, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Annual Meeting of the Association for Computational Linguistics (ACL)</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/Rationalyst">[code]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2410.01044"><b>Rationalyst: Pre-training Process-Supervision for Improving Reasoning.</b></a>  <br />    <a href="https://jiangdongwei.com/"><font color="Black"> Dongwei Jiang</font></a>, Guoxuan Wang, <a href="https://yining610.github.io/"><font color="Black"> Yining Lu</font></a>, <a href="https://scholar.google.com/citations?user=clTRNPsAAAAJ&amp;hl=en"><font color="Black"> Andrew Wang</font></a>, <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, Chuyu Liu, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Annual Meeting of the Association for Computational Linguistics (ACL)</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/Rationalyst">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -550,7 +569,7 @@ Other affiliations:</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-05-16 03:41:02 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-05-17 14:53:03 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
